--- a/src/pages/auth/Auth.css
+++ b/src/pages/auth/Auth.css
@@ -3,7 +3,8 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   background-image: linear-gradient(to bottom right, rgba(93, 174, 255, 0.315), rgba(255, 29, 146, 0.205));
+   background-image:linear-gradient(to bottom right, rgba(29, 142, 255, 0.199), rgba(255, 29, 146, 0.116));
+   z-index: 0;
 }
 
 .auth-container h3 {
@@ -31,14 +32,15 @@
    text-align: center;
    font-size: 1.2rem;
    border-radius: 5px;
-   border:2px solid #9DCEFF;
-   box-shadow:0px 2px 10px rgba(30, 143, 255, 0.377);
+   background-color: rgb(228, 242, 255);
+   border:2px solid white;
+   box-shadow:0px 2px 10px rgba(30, 143, 255, 0.301);
    transition: 0.5s;
 }
 
 .auth-form button {
-   background: rgb(255, 255, 255);
-   color: dodgerblue;
+   background-color: dodgerblue;
+   color: white;
    font-weight: 600;
    height: 40px;
    width: 140px;
@@ -46,4 +48,5 @@
    border-radius: 10px;
    box-shadow:0px 2px 10px rgba(30, 143, 255, 0.377);
    transition: 0.3s;
+   border: 2px solid white;
 }
