--- a/src/pages/main/LandingPage.css
+++ b/src/pages/main/LandingPage.css
@@ -1,13 +1,14 @@
 .landing-page {
-   background-image:linear-gradient(to bottom right, rgba(93, 174, 255, 0.315), rgba(255, 29, 146, 0.205));
+   background-image:linear-gradient(to bottom right, rgba(29, 142, 255, 0.199), rgba(255, 29, 146, 0.116));
 }
 
 .main-header {
-   height: 15vh;
+   height: 20vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   color:rgb(99, 99, 99);
 }
 
 .main-header span {
@@ -28,8 +29,10 @@
    width: 80%;
    border-radius: 5px;
    text-align: center;
-   border: 1px solid rgb(219, 219, 219);
-   box-shadow: 2px 4px 4px rgb(98, 122, 168);
+   border: 2px solid rgb(255, 255, 255);
+   box-shadow: 2px 4px 4px rgba(30, 143, 255, 0.301);
+   background-color: rgb(228, 242, 255);
+   font-size: 1.2rem;
 }
 
 .search-results {
@@ -38,20 +41,20 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-
 }
 
 .car-comp {
    width: 90%;
    margin: 10px;
-   background-color: rgb(255, 255, 255);
+   border:2px solid white;
+   background-color: rgb(228, 242, 255);
    border-radius: 5px;
-   box-shadow: 2px 4px 4px rgb(98, 122, 168);
+   box-shadow: 2px 4px 4px rgba(30, 143, 255, 0.301);
    display: flex;
    align-items: center;
    height: 120px;
    text-decoration: none;
-   color: black;
+   color:rgb(99, 99, 99)
 }
 .car-comp div {
    width: 50%;
@@ -80,13 +83,18 @@
 }
 
 .sort-options button {
-   background-color: white;
+   background-color: dodgerblue;
    border: 1px solid white;
+   color: white;
    border-radius: 5px;
    width: 50px;
    height: 20px;
-   box-shadow: 1px 2px 2px rgb(98, 122, 168);
+   box-shadow: 1px 2px 2px rgba(30, 143, 255, 0.288);
    transition: 1s;
+}
+
+.sort-options button:hover {
+   cursor: pointer;
 }
 
 
