--- a/src/pages/car/CarInfo.css
+++ b/src/pages/car/CarInfo.css
@@ -1,3 +1,136 @@
 .car-info-container img {
-   height: 30vh;
+   max-width: 80%;
+   max-height: 240px;
+   border:2px solid white;
+   border-radius:5px;
 }
+
+.car-info-container {
+   display: flex;
+   flex-direction: column;
+   background-image: linear-gradient(to bottom right, rgba(29, 142, 255, 0.199), rgba(255, 29, 146, 0.116));;
+   color:rgb(99, 99, 99);
+}
+
+.car-info {
+   display: flex;
+   flex-direction: column;
+   min-height: 60vh;
+   align-items: center;
+   justify-content: space-evenly;
+}
+
+.car-info h2 {
+   font-size: 2rem;
+}
+.car-info-b {
+   display: flex;
+   width: 80%;
+   justify-content: space-evenly;
+   align-items: center;
+   font-size: 1.2rem;
+}
+
+.car-info span {
+   font-weight: 500;
+   font-size: 1.4rem;
+}
+
+.car-owner-info {
+   height: 35vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-evenly;
+}
+
+.car-owner-info h4 {
+   font-size: 1.4rem;
+}
+
+.car-owner-info-b {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-evenly;
+   width: 100%;
+   height: 50%;
+}
+
+.owner-msg-btn {
+   background-color: dodgerblue;
+   color: white;
+   cursor: pointer;
+   width: 200px;
+   height: 28px;
+   text-align: center;
+   border-radius: 5px;
+   font-size: 1.2rem;
+}
+
+.msg-container {
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-evenly;
+   overflow: hidden;
+   position: absolute;
+   bottom:0px;
+   transition: 0.5s;
+   background-color: rgba(0, 0, 0, 0.877);
+}
+
+.msg-close-btn {
+   width: 100px;
+   text-align: center;
+   background-color: rgb(255, 0, 0);
+   color:white;
+   border-radius: 5px;
+}
+
+.msg-close-btn:hover {
+   cursor: pointer;
+}
+
+.owner-msg {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-evenly;
+   width: 100%;
+   height: 50%;
+}
+
+.owner-msg h3 {
+   color:dodgerblue;
+}
+
+.owner-msg button {
+   background-color: dodgerblue;
+   color:white;
+   font-size: 1.4rem;
+   width: 200px;
+   border:none;
+   border-radius: 5px;
+}
+
+.owner-msg button:hover {
+   cursor: pointer;
+}
+
+.owner-msg textarea {
+   border-radius: 10px;
+   background-color: rgba(30, 143, 255, 0.356);
+   border: 4px solid white;
+   transition: 0.5s;
+   padding:10px
+}
+
+.owner-msg textarea:focus {
+   border-radius: 10px;
+   background-color: rgba(255, 255, 255, 0.911);
+   border: 4px solid dodgerblue;
+}
+
+
