--- a/src/pages/main/LandingPage.css
+++ b/src/pages/main/LandingPage.css
@@ -1,5 +1,6 @@
 .landing-page {
    background-image:linear-gradient(to bottom right, rgba(29, 142, 255, 0.199), rgba(255, 29, 146, 0.116));
+
 }
 
 .main-header {
@@ -21,6 +22,7 @@
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
+   color:rgb(99, 99, 99)
 }
 
 .search-container input {
@@ -87,7 +89,7 @@
    border: 1px solid white;
    color: white;
    border-radius: 5px;
-   width: 50px;
+   width: 80px;
    height: 20px;
    box-shadow: 1px 2px 2px rgba(30, 143, 255, 0.288);
    transition: 1s;
@@ -95,6 +97,10 @@
 
 .sort-options button:hover {
    cursor: pointer;
+}
+
+.results-length {
+   height: 20px;
 }
 
 
