--- a/src/pages/user/UserPages.css
+++ b/src/pages/user/UserPages.css
@@ -142,12 +142,14 @@
 
 .car-for-sale {
    width: 80%;
+   height: 40px;
    border-radius:5px;
-   background-color: dodgerblue;
+   background-color:rgb(228, 242, 255);
+   border:2px solid white;
    display: flex;
    justify-content: space-around;
    align-items: center;
-   /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.411); */
+   box-shadow: 2px 4px 4px rgba(30, 143, 255, 0.301);
    margin: 10px;
 }
 
@@ -158,7 +160,14 @@
    align-items: center;
    width: 70%;
    text-decoration: none;
-   color:white;
+   border-bottom-left-radius: 5px;
+   border-top-left-radius: 5px;
+   color:rgb(99,99,99)
+}
+
+.link-car h4 {
+   width: 50%;
+   text-align: center;
 }
 
 
@@ -170,11 +179,16 @@
    width: 30%;
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
 }
 
 .sale-delete:hover {
    cursor: pointer;
 }
+
 
 .screen-cover {
    position: fixed;
@@ -182,4 +196,35 @@
    width: 100%;
    height: 0vh;
    transition:0.5s;
+}
+
+.msgs-container {
+   margin-top:10px;
+   background-color: #9DCEFF;
+   text-align: center;
+   color:rgb(99,99,99);
+}
+.msgs-container h4:hover {
+   cursor: pointer;
+}
+
+.msgs {
+   background-color: #9DCEFF;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: start;
+   transition: 0.5s;
+}
+
+.msg {
+   margin:5px;
+   margin-top:10px;
+   border-radius: 5px;
+   background-color:rgb(228, 242, 255);
+   border:2px solid white;
+   width: 90%;
+   box-shadow: 2px 4px 4px rgba(30, 143, 255, 0.301);
+   padding-top: 5px;
+   padding-bottom: 5px;
 }
