--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -8,7 +8,7 @@
 
 .nav-auth {
    height: 100%;
-   width: 49%;
+   width: 50%;
    display: flex;
    justify-content: space-around;
    align-items: center;
@@ -16,26 +16,40 @@
 
 .nav-link {
    height: 90%;
-   width: 49%;
+   width: 50%;
    background-color:white;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color:dodgerblue;
-   border-radius: 2px;
-   border: none;
+   border-radius: 5px;
+   border: 2px solid rgb(228, 242, 255);
+   transition: 0.5s;
 }
 
 .nav-link-b {
    height: 90%;
-   width: 48%;
+   width: 50%;
    background-color:rgb(255, 255, 255);
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color:dodgerblue;
-   border-radius: 2px;
-   border: none;
+   border-radius: 5px;
+   border: 2px solid rgb(228, 242, 255);
+   transition: 0.5s;
+}
+
+.nav-link-b:hover,
+.nav-link:hover {
+   background-color: dodgerblue;
+   color:white;
+}
+
+@media screen and (min-width:600px) {
+   .nav-link, .nav-link-b {
+      font-size:1.6rem;
+   }
 }
